# fastllm

./: .gitignore  CHANGELOG.md  README.md  embedding_results.json  justfile  pyproject.toml  setup.py
docs/: api-reference.md  architecture.md
examples/: README.md  notebook_test.ipynb  parallel_test.py  prompts.txt  requests.jsonl  requirements.txt
fastllm/: __init__.py  cache.py  cli.py  core.py
fastllm/providers/: __init__.py  base.py  openai.py
tests/: test_asyncio.py  test_core.py  test_openai.py  test_providers.py  test_request_batch.py
