[tool.poetry]
name = "fastllm"
version = "0.1.0"
description = "High-performance parallel LLM API request tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "fastllm"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
asyncio = "^3.4.3"
pydantic = "^2.6.3"
rich = "^13.7.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry.scripts]
fastllm = "fastllm.cli:app" 